project('tutorial', 'c', 'cpp', default_options : ['c_std=c11', 'cpp_std=c++11'])
add_global_arguments('-fuse-ld=gold', language : 'c')
executable('address',  'address.c')
executable('pointer',  'pointer.c')
executable('function', 'function.c')
executable('array', 'array.c')
executable('strarray', 'strarray.c')
executable('parray', 'parray.c')
executable('malloc', 'malloc.c')
executable('free', 'free.c')
executable('new', 'new.cpp')
executable('segfault1', 'segfault1.cpp')
